feat: 자동 구매 횟수와 수동 구매 횟수를 출력하는 기능 추가
세부사항
- 자동 생성과 수동 생성으로 인한 코드 수정