@@ -2,9 +2,11 @@ package model;
 
 import global.Rank;
 
+import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.stream.Collectors;
 
 public class Lottos {
 
@@ -14,10 +16,15 @@ public class Lottos {
         this.lottos = lottos;
     }
 
+    public Lottos(final List<Lotto> manual, final List<Lotto> auto) {
+        manual.addAll(auto);
+        this.lottos = manual;
+    }
+
     public static Lottos forManualInput(final List<String[]> manualInput) {
         List<Lotto> lottos = manualInput.stream()
                 .map(Lotto::fromStringsInput)
-                .toList();
+                .collect(Collectors.toList());
 
         return new Lottos(lottos);
     }
@@ -46,6 +53,6 @@ public class Lottos {
     }
 
     public List<Lotto> getLottos() {
-        return lottos;
+        return new ArrayList<>(lottos);
     }
 }
